# monkeyking

./: .gitignore  MonkeyKing_Incubation_Story.md  README.md  main.py  pyproject.toml
.monkeyking/: config.json  soul.md
.monkeyking/skills/openclaw-research/: SKILL.md
.monkeyking/skills/openclaw-research/references/: source-quality.md
docs/: wiki.md
src/agents/: assistant_agent.py  base_agent.py  callback.py
src/api/: server.py
src/channels/: base_channel.py  feishu_channel.py  manager.py
src/skills/: base_skill.py  deep_research_skill.py  file_governance_skill.py  memory_governance_skill.py  scheduling_skill.py  skill_pack.py  skill_self_evolution.py  weather_advisory_skill.py
src/skills/skillpacks/agent-creator/: SKILL.md
src/skills/skillpacks/deep-research/: SKILL.md
src/skills/skillpacks/file-governance/: SKILL.md
src/skills/skillpacks/memory-governance/: SKILL.md
src/skills/skillpacks/news-brief/: SKILL.md
src/skills/skillpacks/scheduling/: SKILL.md
src/tools/: baidu_search.py  base_tool.py  current_date_tool.py  current_time_tool.py  custom_golden_cudgel_animator.py  date_based_weather_forecast.py  directory_creator.py  directory_lister.py  enhanced_reminder_tool.py  file_reader.py  file_writer.py  golden_cudgel_animator.py  manager.py  memory_consolidation.py  reminder_tool.py  scheduling_tools.py  skill_installer.py  tool_cleaner.py  tool_config_manager.py  weather_checker.py  weather_checker_multi_platform.py  weather_forecast.py  web_search.py
src/utils/: cli.py  config.py  scheduler.py
src/web/: app.js  index.html  style.css
(+8 files in other folders)
